objects/HealthCloudGA__RiskScoreHCCCode__mdt.object
<CustomObject>
    <description>Lookup table with information about HCC Codes and Scores</description>
    <fields>
        <fullName>HealthCloudGA__CommunityFBDualAged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community FBDual Aged</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityFBDualDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community FBDual Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityNonDualAged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community NonDual Aged</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityNonDualDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community NonDual Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityPBDualAged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community PBDual Aged</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityPBDualDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community PBDual Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Community__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ConditionCategory__c</fullName>
        <label>Condition Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HCCCode__c</fullName>
        <label>HCCCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Institutional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Institutional</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this record should be used.</description>
        <inlineHelpText>Whether this record should be used.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OverriddenHCCCodes__c</fullName>
        <label>Overridden HCC Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__YearSpan__c</fullName>
        <label>Year Span</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Risk Score HCCCode</label>
    <pluralLabel>Risk Score HCCCode</pluralLabel>
</CustomObject>